# telegram-chat-analyzer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: mypy.yml  ruff.yml
docs/: features.md  tutorials.md
examples/: all_aggregates.json  raw[+5].json  raw[-5].json  raw[0].json  report.html  report.mobile.html  report.xlsx  social_graph.json
scripts/: __init__.py  step1_normalize.py  step1_params.py  step2_aggregates.py  step2_normalize.py  step3_5_social_graph.py  step3_aggregates.py  step3_build_html.py  step4_build_html.py  step4_report_exel.py  step5_report_exel.py  tool_author_text.py  tool_context.py  tool_params.py  utils.py  utils_compress_chat.py
templates/: desktop.html  mobile.html
