[project]
name = "telegram-chat-analyzer"
version = "0.1.0"
description = "A tool for analyzing Telegram chat history based on JSON export."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.9.0",
    "pandas>=2.0.0",
    "pymorphy3>=1.0.0",
    "tqdm>=4.65.0",
    "xlsxwriter>=3.1.0",
]
