[project]
name = "telegram-chat-analyzer"
version = "0.1.0"
description = "A tool for analyzing Telegram chat history based on JSON export."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.9.0",
    "pandas>=2.0.0",
    "pymorphy3>=1.0.0",
    "tqdm>=4.65.0",
    "xlsxwriter>=3.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120
target-version = "py313"
[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "PTH",
    "T20",
    "RET",
    "RUF",
]
ignore = ["RUF001", "RUF002", "RUF003"]
[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "xlsxwriter.*",
    "pymorphy3.*"
]
ignore_missing_imports = true